<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <POU Name="B_3_1_PRG_Master_Station_3" Id="{474f4225-5110-4ccd-bbcf-78541da80fa5}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM B_3_1_PRG_Master_Station_3

VAR
	eState								: E_Station2_State;
	tonErrorReset						: TON;
	tonStationStopped					: TON;
	ctuErrorCounter						: CTU;
	rGoodStatistics						: R_TRIG;
	rBadStatistics						: R_TRIG;
	rEfficency							: STRING(510);
	
	bPersistentError					: BOOL;
	bEventsFlag							: ARRAY [0..100] OF BOOL;
/////////////////////////////////////////////////////////////////////////////////////I O/////////////////////////////////////////////////////////////////////////////////////	
	bStopped							: BOOL;
	bError								: BOOL;
	bReady								: BOOL;
	bDone								: BOOL;
	bPass								: BOOL;
	bFail								: BOOL;
	
END_VAR

VAR_INPUT	
	
	CMD									:ST_StationCMD;	
	
END_VAR

VAR_OUTPUT	
	
	STATUS								:ST_StationStatus;	
	
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[a_ACT_Ctrl_Station_3();
b_ACT_IO();
c_ACT_Statistics_Station_3();]]></ST>
    </Implementation>
    <Action Name="a_ACT_Ctrl_Station_3" Id="{18b6a780-51d7-4962-ac1f-d8e3484c4d5a}">
      <Implementation>
        <ST><![CDATA[/////////////////////////////////////////////////////////////////////////////////////UTILITIES/////////////////////////////////////////////////////////////////////////////////////
tonErrorReset( IN := (eState = E_Station3_State.RESET_ERROR), PT := T#500MS);
tonStationStopped( IN := bStopped, PT := T#1S);
ctuErrorCounter( CU := eState = E_Station3_State.RESET_ERROR, RESET := ((ctuErrorCounter.CV = 5) AND eState = E_Station3_State.PERSISTENT_ERROR), PV := 5, Q => bPersistentError);

/////////////////////////////////////////////////////////////////////////////////////CONDITIONS/////////////////////////////////////////////////////////////////////////////////////

IF (CMD.bAbort OR bError) AND ( eState			= E_Station3_State.HOMING OR
								eState			= E_Station3_State.READY OR
								eState			= E_Station3_State.MOVEMENT_A OR
								eState			= E_Station3_State.MOVEMENT_B OR
								eState			= E_Station3_State.MOVEMENT_C OR
								eState			= E_Station3_State.READY OR
								eState			= E_Station3_State.DONE) THEN
								
	eState						:= E_Station3_State.STOPPING;
	
END_IF

IF CMD.bAbort OR NOT CMD.bEnable THEN
	eState						:= E_Station3_State.ABORTED;
END_IF

CASE eState OF
	
	E_Station3_State.ABORTED:
								IF CMD.bEnable AND NOT bError THEN
									eState						:= E_Station3_State.HOMING;
								ELSIF bError THEN
									eState						:= E_Station3_State.ERROR;
								END_IF
	
	E_Station3_State.HOMING:
								IF bReady THEN
									eState						:= E_Station3_State.READY;
								END_IF
	E_Station1_State.RESET:
								stCycleDataStation3.bPass	:= FALSE;
								stCycleDataStation3.bFail	:= FALSE;
								
								eState						:= E_Station3_State.READY;	
	E_Station3_State.READY:
								IF CMD.bExecute AND stStation3.Mov1 THEN
									eState						:= E_Station3_State.MOVEMENT_A;
								ELSIF CMD.bExecute AND stStation3.Mov2 THEN
									eState						:= E_Station3_State.MOVEMENT_B;
								ELSIF CMD.bExecute AND stStation3.Mov3 THEN
									eState						:= E_Station3_State.MOVEMENT_C;
								END_IF
	
	E_Station3_State.MOVEMENT_A:
								IF bDone AND stStation3.Mov1 THEN
									eState						:= E_Station3_State.DONE;
								END_IF
	
	E_Station3_State.MOVEMENT_B:
								IF bDone AND stStation3.Mov2 THEN
									eState						:= E_Station3_State.DONE;
								END_IF
	E_Station3_State.MOVEMENT_C:
								IF bDone AND stStation3.Mov3 THEN
									eState						:= E_Station3_State.DONE;
								END_IF
	E_Station3_State.DONE:
								IF  CMD.bReady THEN
									eState						:= E_Station3_State.READY;
								END_IF
								
	E_Station1_State.RESULTS:
								
								IF bPass THEN
									stCycleDataStation3.bPass	:= TRUE;
								ELSIF bFail THEN
								 	stCycleDataStation3.bFail	:= TRUE;
								END_IF
								
								IF  CMD.bEndCycle THEN
									eState						:= E_Station3_State.RESET;
								END_IF
	/////////////////////////////////////////////////////////////////////////////////////RESET CMD/////////////////////////////////////////////////////////////////////////////////////
	
	E_Station3_State.STOPPING: 
								IF tonStationStopped.Q THEN
									IF bError THEN
										eState						:= E_Station3_State.ERROR;
									ELSE eState						:= E_Station3_State.ABORTED;
									END_IF

								END_IF
	
	E_Station3_State.ERROR:
								IF NOT bError THEN
									eState						:= E_Station3_State.ABORTED;
								ELSE eState						:= E_Station3_State.RESET_ERROR;
								END_IF
	
	E_Station3_State.RESET_ERROR:
								IF tonErrorReset.Q AND NOT bPersistentError THEN
									eState						:= E_Station3_State.ERROR;
								ELSIF bPersistentError THEN
									eState						:= E_Station3_State.PERSISTENT_ERROR;
								END_IF
	
	E_Station3_State.PERSISTENT_ERROR:
								IF CMD.bReset THEN
									eState						:= E_Station3_State.ERROR;
								END_IF
								
								

ELSE eState := E_Station3_State.ABORTED;
	
END_CASE
/////////////////////////////////////////////////////////////////////////////////////STATUS/////////////////////////////////////////////////////////////////////////////////////

Status.bBusy				:= 	eState			= E_Station3_State.HOMING OR
								eState			= E_Station3_State.MOVEMENT_A OR
								eState			= E_Station3_State.MOVEMENT_B OR
								eState			= E_Station3_State.MOVEMENT_C OR
								eState			= E_Station3_State.STOPPING;
								
Status.bDone				:=	eState			= E_Station3_State.DONE;
											
Status.bError				:= 	eState			= (E_Station3_State.ERROR OR  E_Station3_State.RESET_ERROR OR E_Station3_State.PERSISTENT_ERROR);

Status.bReady				:= 	eState			= E_Station3_State.READY;

Status.bStopped				:= 	eState			= E_Station3_State.ABORTED OR
								eState			= E_Station3_State.READY OR
								eState			= E_Station3_State.ERROR OR
								eState			= E_Station3_State.RESET_ERROR;]]></ST>
      </Implementation>
    </Action>
    <Action Name="b_ACT_IO" Id="{440050ef-4990-4273-9ec8-027f575cfd9b}">
      <Implementation>
        <ST><![CDATA[//bStopped								:=;
//bError								:=;
//bReady								:=;
//bDone]]></ST>
      </Implementation>
    </Action>
    <Action Name="c_ACT_Statistics_Station_3" Id="{b9943b98-9d8e-469d-a7a3-a69e1222f6e9}">
      <Implementation>
        <ST><![CDATA[stStatisticsHMI[3].sName			:= 'Station 3';


rGoodStatistics( CLK := (stCycleDataStation3.bPass AND (eState = E_Station3_State.RESULTS)) OR bStatisticsTest[4]);
rBadStatistics( CLK := (stCycleDataStation3.bFail AND (eState = E_Station3_State.RESULTS)) OR bStatisticsTest[5]);

IF 	rGoodStatistics.Q THEN
	
	stStatisticsHMI[3].nGood		:= stStatisticsHMI[3].nGood + 1;
	stStatisticsHMI[3].nTotalGood	:= stStatisticsHMI[3].nTotalGood + 1;
	
END_IF
								
IF 	rBadStatistics.Q THEN
	
	stStatisticsHMI[3].nBad			:= stStatisticsHMI[3].nBad + 1;
	stStatisticsHMI[3].nTotalBad	:= stStatisticsHMI[3].nTotalBad + 1;
	
END_IF

IF stStatisticsHMI[3].bResetGood THEN
	stStatisticsHMI[3].nGood		:= 0;
END_IF

IF stStatisticsHMI[3].bResetBad THEN
	stStatisticsHMI[3].nBad			:= 0;
END_IF

IF (( stStatisticsHMI[3].nGood + stStatisticsHMI[3].nBad) <> 0) THEN
	
	rEfficency							:= LREAL_TO_FMTSTR(in := (DINT_TO_REAL(stStatisticsHMI[3].nGood) /( DINT_TO_REAL(stStatisticsHMI[3].nGood) + DINT_TO_REAL(stStatisticsHMI[3].nBad))) * 100.0,iPrecision := 2, bRound := TRUE);
	stStatisticsHMI[3].nEfficency		:= CONCAT(STR1 := '%', STR2 := (rEfficency));

ELSE stStatisticsHMI[3].nEfficency		:= CONCAT(STR1 := '%', STR2 := (DINT_TO_STRING(0)));
	
END_IF
]]></ST>
      </Implementation>
    </Action>
    <Action Name="d_ACT_Set_Events_Station_3" Id="{05e142ea-c5f7-47d9-a898-cf4cc797e73e}">
      <Implementation>
        <ST><![CDATA[//IMMEDIATE FAULTS

stStationEvents[3].aEvents[0].bImmediateFault				:= TRUE;
stStationEvents[3].aEvents[0].bEventFlag					:= bEventsFlag[0];
stStationEvents[3].aEvents[0].bEventText					:= 'ST1 EVENT 0';
stStationEvents[3].aEvents[0].sSolution						:= 'Solution 5';


//CYCLE STOP FAULT

stStationEvents[3].aEvents[1].bCycleStopFault				:= TRUE;
stStationEvents[3].aEvents[1].bEventFlag					:= bEventsFlag[1];
stStationEvents[3].aEvents[1].bEventText					:= 'ST1 EVENT 1';
stStationEvents[3].aEvents[1].sSolution						:= 'Solution 6';


//CYCLE STOP REQUEST

stStationEvents[3].aEvents[2].bCycleStopRequest			:= TRUE;
stStationEvents[3].aEvents[2].bEventFlag					:= bEventsFlag[2];
stStationEvents[3].aEvents[2].bEventText					:= 'ST1 EVENT 7';]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="B_3_1_PRG_Master_Station_3">
      <LineId Id="150" Count="1" />
      <LineId Id="41" Count="0" />
    </LineIds>
    <LineIds Name="B_3_1_PRG_Master_Station_3.a_ACT_Ctrl_Station_3">
      <LineId Id="130" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="71" Count="0" />
      <LineId Id="110" Count="0" />
      <LineId Id="132" Count="0" />
      <LineId Id="131" Count="0" />
      <LineId Id="119" Count="6" />
      <LineId Id="133" Count="0" />
      <LineId Id="126" Count="2" />
      <LineId Id="70" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="64" Count="2" />
      <LineId Id="3" Count="12" />
      <LineId Id="18" Count="0" />
      <LineId Id="153" Count="3" />
      <LineId Id="19" Count="7" />
      <LineId Id="29" Count="4" />
      <LineId Id="36" Count="4" />
      <LineId Id="43" Count="3" />
      <LineId Id="49" Count="0" />
      <LineId Id="136" Count="2" />
      <LineId Id="135" Count="0" />
      <LineId Id="141" Count="0" />
      <LineId Id="143" Count="9" />
      <LineId Id="142" Count="0" />
      <LineId Id="139" Count="1" />
      <LineId Id="67" Count="0" />
      <LineId Id="134" Count="0" />
      <LineId Id="101" Count="0" />
      <LineId Id="103" Count="0" />
      <LineId Id="105" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="102" Count="0" />
      <LineId Id="69" Count="0" />
      <LineId Id="50" Count="9" />
      <LineId Id="114" Count="1" />
      <LineId Id="60" Count="0" />
      <LineId Id="111" Count="1" />
      <LineId Id="116" Count="2" />
      <LineId Id="113" Count="0" />
      <LineId Id="109" Count="0" />
      <LineId Id="61" Count="2" />
      <LineId Id="1" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="72" Count="0" />
      <LineId Id="76" Count="1" />
      <LineId Id="80" Count="0" />
      <LineId Id="96" Count="0" />
      <LineId Id="83" Count="0" />
      <LineId Id="97" Count="0" />
      <LineId Id="85" Count="0" />
      <LineId Id="98" Count="0" />
      <LineId Id="86" Count="0" />
      <LineId Id="99" Count="0" />
      <LineId Id="92" Count="3" />
    </LineIds>
    <LineIds Name="B_3_1_PRG_Master_Station_3.b_ACT_IO">
      <LineId Id="1" Count="3" />
    </LineIds>
    <LineIds Name="B_3_1_PRG_Master_Station_3.c_ACT_Statistics_Station_3">
      <LineId Id="2" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="30" Count="0" />
      <LineId Id="3" Count="1" />
      <LineId Id="13" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="16" Count="0" />
      <LineId Id="8" Count="2" />
      <LineId Id="19" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="20" Count="1" />
      <LineId Id="1" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="24" Count="1" />
      <LineId Id="27" Count="2" />
      <LineId Id="26" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="46" Count="7" />
      <LineId Id="14" Count="0" />
    </LineIds>
    <LineIds Name="B_3_1_PRG_Master_Station_3.d_ACT_Set_Events_Station_3">
      <LineId Id="50" Count="19" />
      <LineId Id="1" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>